//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table centralized_barcodes {
  id Int [pk, increment]
  barcode String [unique, not null]
  entityType EntityType [not null]
  entityId Int [not null]
  libraryItems library_items [not null]
  attendees attendees [not null]
  playToWinItems play_to_win_items [not null]

  indexes {
    (entityType, entityId) [unique]
  }
}

Table conventions {
  id Int [pk, increment]
  name String [unique, not null]
  extraHoursStartDateTimeUtc DateTime
  startDateTimeUtc DateTime
  endDateTimeUtc DateTime
  updatedAtUtc String [not null]
  isCancelled Boolean [not null, default: false]
  venueId Int
  venue venues
  playToWinGames play_to_win_items [not null]
  attendees attendees [not null]
  playToWinPlays play_to_win_plays [not null]
}

Table venues {
  id Int [pk, increment]
  name String [unique, not null]
  streetNumber String [not null]
  streetName String [not null]
  city String [not null]
  stateProvince String [not null]
  postalCode String [not null]
  latitude Decimal
  longitude Decimal
  timeZone String
  convention conventions [not null]
}

Table board_game_geek_items {
  id Int [pk]
  itemName String [not null]
  type String [not null]
  description String
  thumbnailUrl String
  imageUrl String
  yearPublished Int
  publisherName String
  playingTimeMinutes Int
  minimumPlayerCount Int
  maximumPlayerCount Int
  minimumPlayerAge Int
  ranking Int
  votedBestPlayerCount Int
  averageUserRating Decimal
  complexityRating Decimal
  libraryItems library_items [not null]
  libraryItemContains library_item_contents [not null]
  gameMechanics game_mechanics [not null]
}

Table bgg_mechanics {
  id Int [pk]
  name String [unique, not null]
  gameMechanics game_mechanics [not null]
}

Table game_mechanics {
  boardGameGeekId Int [not null]
  boardGameGeekThing board_game_geek_items [not null]
  mechanicId Int [not null]
  mechanic bgg_mechanics [not null]

  indexes {
    (boardGameGeekId, mechanicId) [unique]
  }
}

Table library_items {
  id Int [pk, increment]
  boardGameGeekId Int [not null]
  boardGameGeekThing board_game_geek_items [not null]
  barcode String [unique, not null]
  alias String
  owner String [not null]
  isHidden Boolean [not null]
  isCheckedOut Boolean [not null]
  totalCheckedOutMinutes Int [not null, default: 0]
  dateAddedUtc DateTime [not null]
  updatedAtUtc DateTime [not null]
  checkOutEvents library_checkout_events [not null]
  additionalBoxContent library_item_contents [not null]
  centralizedBarcode centralized_barcodes [not null]
}

Table library_item_contents {
  libraryItemId Int [not null]
  libraryItem library_items [not null]
  boardGameGeekId Int [not null]
  additionalBoxContent board_game_geek_items [not null]

  indexes {
    (libraryItemId, boardGameGeekId) [unique]
  }
}

Table people {
  id Int [pk, increment]
  firstName String [not null]
  preferredName String
  lastName String [not null]
  email String [unique]
  phoneNumber String [unique]
  zipCode String
  dateAdded DateTime [default: `now()`, not null]
  emergencyContactName String
  emergencyContactPhoneNumber String
  emergencyContactRelationship String
  attendee attendees [not null]
  relatedTo people
  relatedPersonId Int
  relatedBy people [not null]

  indexes {
    (firstName, lastName, relatedPersonId) [unique]
  }
}

Table play_to_win_items {
  id Int [pk, increment]
  barcode String [unique, not null]
  boardGameGeekId Int
  gameName String
  conventionId Int [not null]
  convention conventions [not null]
  isHidden Boolean [not null]
  publisherName String
  dateAddedUtc DateTime [not null]
  centralizedBarcode centralized_barcodes [not null]
  playToWinPlays play_to_win_plays [not null]
}

Table library_checkout_events {
  id String [pk]
  libraryCopyId Int [not null]
  library library_items [not null]
  attendeeId Int [not null]
  attendee attendees [not null]
  checkedOutTimeUtcIso DateTime [not null]
  checkedInTimeUtcIso DateTime
}

Table play_to_win_plays {
  id String [pk]
  playToWinItemId Int [not null]
  playToWinItem play_to_win_items [not null]
  checkedInTimeUtcIso DateTime [not null]
  conventionId Int [not null]
  convention conventions [not null]
  playToWinPlayAttendees play_to_win_play_players [not null]
}

Table play_to_win_play_players {
  id String [pk]
  playToWinPlayId String [not null]
  playToWinPlay play_to_win_plays [not null]
  attendeeId Int [not null]
  attendee attendees [not null]
}

Table attendees {
  id Int [pk, increment]
  personId Int [not null]
  barcode String [unique, not null]
  person people [not null]
  isCheckedIn Boolean [not null, default: false]
  hasCancelled Boolean [not null, default: false]
  isStayingOnSite Boolean [not null, default: false]
  conventionId Int [not null]
  convention conventions [not null]
  checkedInUtc DateTime
  dateRegistered DateTime [not null]
  isVolunteer Boolean [not null, default: false]
  isTgdOrganizer Boolean [not null, default: false]
  passPurchased PassTypePurchased [not null]
  centralizedBarcode centralized_barcodes [not null]
  checkOutEvents library_checkout_events [not null]
  playToWinPlays play_to_win_play_players [not null]

  indexes {
    (personId, conventionId) [unique]
  }
}

Enum EntityType {
  Attendee
  LibraryItem
  PlayToWinItem
}

Enum PassTypePurchased {
  Free
  Individual
  Couple
  Family
}

Ref: conventions.venueId > venues.id

Ref: game_mechanics.boardGameGeekId > board_game_geek_items.id

Ref: game_mechanics.mechanicId > bgg_mechanics.id

Ref: library_items.boardGameGeekId > board_game_geek_items.id

Ref: library_items.barcode > centralized_barcodes.barcode

Ref: library_item_contents.libraryItemId > library_items.id

Ref: library_item_contents.boardGameGeekId > board_game_geek_items.id

Ref: people.relatedPersonId - people.id

Ref: play_to_win_items.conventionId > conventions.id

Ref: play_to_win_items.barcode > centralized_barcodes.barcode

Ref: library_checkout_events.libraryCopyId > library_items.id

Ref: library_checkout_events.attendeeId > attendees.id

Ref: play_to_win_plays.playToWinItemId > play_to_win_items.id

Ref: play_to_win_plays.conventionId > conventions.id

Ref: play_to_win_play_players.playToWinPlayId > play_to_win_plays.id

Ref: play_to_win_play_players.attendeeId > attendees.id

Ref: attendees.personId > people.id

Ref: attendees.conventionId > conventions.id

Ref: attendees.barcode > centralized_barcodes.barcode